# kimichat

./: CLAUDE.md  Cargo.toml  Cargo.toml.old  PLAN_PLUGGABLE_TERMINAL_BACKENDS.md  README.md  REFACTORING_MAP.md  RUSTYLINE_SIGWINCH_BUG.md  TERMINAL_SESSIONS_DESIGN.md  WEB_FRONTEND_README.md  how_to_new_tool.md  kimi.md  plan-tests.md  search_tool_spec.md  wishlist.md
agents/configs/: code_analyzer.json  code_reviewer.json  file_manager.json  planner.json  search_specialist.json  system_operator.json  terminal_specialist.json
crates/kimichat-agents/: Cargo.toml
crates/kimichat-agents/src/: agent.rs  agent_config.rs  agent_factory.rs  agent_tests.rs  anthropic_client.rs  coordinator.rs  embedded_configs.rs  groq_client.rs  lib.rs  llama_cpp_client.rs  progress_evaluator.rs  task.rs  visibility.rs
crates/kimichat-api/: Cargo.toml
crates/kimichat-api/src/: anthropic_client.rs  groq_client.rs  lib.rs  llama_cpp_client.rs  streaming.rs.deferred
crates/kimichat-app/: Cargo.toml
crates/kimichat-app/src/: api_client.rs  api_streaming.rs  cli.rs  lib.rs  main.rs  open_file.rs  request_logger.rs
crates/kimichat-app/src/app/: mod.rs  repl.rs  setup.rs  task.rs  web_server.rs
crates/kimichat-app/src/chat/: history.rs  session.rs  state.rs
crates/kimichat-app/src/config/: helpers.rs  mod.rs
crates/kimichat-app/src/tools_execution/: mod.rs  parsing.rs  validation.rs
crates/kimichat-app/src/web/: mod.rs  protocol.rs  routes.rs  server.rs  session_manager.rs
crates/kimichat-chat/: Cargo.toml
crates/kimichat-chat/src/: api_client.rs  api_streaming.rs  lib.rs
crates/kimichat-chat/src/chat/: history.rs  mod.rs  session.rs
crates/kimichat-chat/src/tools_execution/: validation.rs
crates/kimichat-llm-api/: Cargo.toml
crates/kimichat-llm-api/src/: lib.rs
crates/kimichat-llm-api/src/client/: anthropic.rs  groq.rs  llama_cpp.rs  mod.rs
crates/kimichat-llm-api/src/config/: factory.rs  mod.rs
crates/kimichat-llm-api/src/tests/: mod.rs  model_config_tests.rs
crates/kimichat-llm-api/tests/fixtures/: mod.rs
crates/kimichat-logging/: Cargo.toml
crates/kimichat-logging/src/: conversation_logger.rs  lib.rs  request_logger.rs
crates/kimichat-models/: Cargo.toml
crates/kimichat-models/src/: lib.rs  responses.rs  types.rs
crates/kimichat-models/src/tests/: model_resolution_tests.rs
crates/kimichat-policy/: Cargo.toml
crates/kimichat-policy/src/: lib.rs
crates/kimichat-skills/: Cargo.toml
crates/kimichat-skills/src/: lib.rs
crates/kimichat-skills/src/embeddings/: fastembed_backend.rs
crates/kimichat-terminal/: Cargo.toml
crates/kimichat-terminal/src/: backend.rs  lib.rs  logger.rs  manager.rs  pty_backend.rs  pty_handler.rs  screen_buffer.rs  session.rs  tmux_backend.rs  tools.rs.later
crates/kimichat-todo/: Cargo.toml
crates/kimichat-todo/src/: lib.rs
crates/kimichat-toolcore/: Cargo.toml
crates/kimichat-toolcore/tests/: tool_context_tests.rs  tool_registry_tests.rs
crates/kimichat-toolcore/tests/common/: mod.rs
crates/kimichat-tools/: Cargo.toml
crates/kimichat-tools/src/: file_ops.rs  helpers.rs  iteration_control.rs  lib.rs  model_management.rs  project_tools.rs  search.rs  skill_tools.rs  subagent_tools.rs  system.rs  terminal_tools.rs  todo_tools.rs
crates/kimichat-tools/src/core/: tool_context.rs
crates/kimichat-tools/src/tools/: file_ops.rs  mod.rs  todo_tools.rs
crates/kimichat-tools/tests/fixtures/: mod.rs
crates/kimichat-types/: Cargo.toml
crates/kimichat-types/src/: lib.rs  open_file.rs  todo.rs
crates/kimichat-wasm/: Cargo.toml  build.sh
crates/kimichat-wasm/src/: chat_ui.rs  dom.rs  lib.rs  markdown.rs  protocol.rs  session_list.rs  utils.rs  websocket.rs
docs/dev/: CODE_REVIEW_CHECKLIST.md  enhanced-superpowers-prompt.md
docs/plans/: 2025-06-18-compact-command.md
done/: cost_spec.md  logging_spec.md  open_file_spec.md  search_files_spec.md
kimichat-main/: Cargo.toml
kimichat-main/src/: cli.rs  main.rs  open_file.rs
kimichat-main/src/agents/: agent.rs  agent_factory.rs  coordinator.rs  groq_client.rs  llama_cpp_client.rs  mod.rs  progress_evaluator.rs  task.rs
kimichat-main/src/api/: client.rs  streaming.rs
kimichat-main/src/app/: mod.rs  repl.rs  setup.rs  subagent.rs  subagent_tests.rs  task.rs  web_server.rs
kimichat-main/src/chat/: history.rs  mod.rs  session.rs  state.rs  tests.rs
kimichat-main/src/cli/: tests.rs
kimichat-main/src/config/: helpers.rs  mod.rs
kimichat-main/src/core/: mod.rs  tool_context.rs  tool_registry.rs
kimichat-main/src/logging/: request_logger.rs
kimichat-main/src/models/: mod.rs
kimichat-main/src/skills/: embedded.rs
kimichat-main/src/terminal/: mod.rs  pty_handler.rs
kimichat-main/src/tools/: file_ops.rs  mod.rs  project_tools.rs  system.rs  todo_tools.rs
kimichat-main/src/tools_execution/: parsing.rs  validation.rs
kimichat-main/src/web/: mod.rs  persistence.rs  protocol.rs  routes.rs  server.rs  session_manager.rs
projects/jsonl-viewer/: kimi.md
projects/jsonl-viewer/src/: main.rs
scripts/: verify-code-review.sh
skills/using-superpowers/: SKILL.md
src/: cli.rs  config.rs  logging.rs  main.rs  open_file.rs  preview.rs
src/agents/: agent.rs  agent_factory.rs  anthropic_client.rs  coordinator.rs  groq_client.rs  llama_cpp_client.rs  mod.rs  task.rs  visibility.rs
src/api/: client.rs
src/app/: repl.rs
src/chat/: history.rs  mod.rs  session.rs  state.rs
src/config/: helpers.rs  mod.rs
src/core/: mod.rs  tool.rs  tool_context.rs  tool_registry.rs
src/logging/: request_logger.rs
src/models/: mod.rs  requests.rs  types.rs
src/skills/: mod.rs
src/skills/embeddings/: fastembed_backend.rs
src/terminal/: backend.rs  manager.rs  mod.rs  pty_backend.rs  pty_handler.rs  session.rs  tools.rs
src/tools/: file_ops.rs  iteration_control.rs  mod.rs  model_management.rs  project_tools.rs  search.rs  skill_tools.rs  system.rs
src/web/: routes.rs  session_manager.rs
web/: index.html  manifest.json  session.html
