[package]
name = "kimichat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
rustyline = "14.0"
glob = "0.3"
dotenvy = "0.15"
regex = "*"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
similar = { version = "2.6", features = ["inline"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
