[workspace]
resolver = "2"
members = [
    "crates/kimichat-types",
    "crates/kimichat-models",
    "crates/kimichat-policy",
    "crates/kimichat-terminal",
    "crates/kimichat-tools",
    "crates/kimichat-skills",
    "crates/kimichat-api",
    "crates/kimichat-agents",
    "crates/kimichat-chat",
    "crates/kimichat-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
kimichat-types = { path = "crates/kimichat-types" }
kimichat-models = { path = "crates/kimichat-models" }
kimichat-policy = { path = "crates/kimichat-policy" }
kimichat-terminal = { path = "crates/kimichat-terminal" }
kimichat-tools = { path = "crates/kimichat-tools" }
kimichat-skills = { path = "crates/kimichat-skills" }
kimichat-api = { path = "crates/kimichat-api" }
kimichat-agents = { path = "crates/kimichat-agents" }
kimichat-chat = { path = "crates/kimichat-chat" }

# Async runtime and utilities
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"

# HTTP and API
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and UI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2.1"
rustyline = "14.0"

# File and text utilities
glob = "0.3"
ignore = "0.4"
regex = "*"
similar = { version = "2.6", features = ["inline"] }

# Time and IDs
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Terminal/PTY support
portable-pty = "0.8"
vt100 = "0.15"

# Configuration
dotenvy = "0.15"

# Optional embeddings (for skills)
fastembed = "5"

# Platform-specific
[workspace.dependencies.libc]
version = "0.2"

# Default binary
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
