[workspace]
members = [
    "kimichat-main",
    "crates/kimichat-agents",
    "crates/kimichat-models",
    "crates/kimichat-logging",
    "crates/kimichat-llm-api",
    "crates/kimichat-todo",
    "crates/kimichat-policy",
    "crates/kimichat-skills",
    "crates/kimichat-terminal",
    "crates/kimichat-toolcore",
    "crates/kimichat-tools",
    "crates/kimichat-wasm",
]
resolver = "2"

[workspace.dependencies]
# Testing dependencies shared across workspace
tokio-test = "0.4"
tempfile = "3.10"
mockall = "0.12"
pretty_assertions = "1.4"
wiremock = "0.5"
serde_json = "1.0"
proptest = "1.0"
tokio = { version = "1.41", features = ["full"] }
serial_test = "3.0"
env_logger = "0.11"
