[package]
name = "kimichat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
clap_complete = "4.5"
colored = "2.1"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
ignore = "0.4"
kimichat-logging = { path = "../crates/kimichat-logging" }
kimichat-models = { path = "../crates/kimichat-models" }
kimichat-policy = { path = "../crates/kimichat-policy" }
kimichat-skills = { path = "../crates/kimichat-skills", features = ["embeddings"] }
kimichat-terminal = { path = "../crates/kimichat-terminal" }
kimichat-todo = { path = "../crates/kimichat-todo" }
portable-pty = "0.8"
regex = "*"
rustyline = "14.0"
serde_json = "1.0"
thiserror = "1.0"
tokio-util = "0.7"
toml = "0.8"
tower = "0.4"
vt100 = "0.15"

[dependencies.axum]
features = [
    "ws",
    "macros",
]
version = "0.7"

[dependencies.chrono]
features = ["serde"]
version = "0.4.42"

[dependencies.clap]
features = [
    "derive",
    "env",
]
version = "4.5"

[dependencies.reqwest]
features = [
    "json",
    "stream",
]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.similar]
features = ["inline"]
version = "2.6"

[dependencies.tokio]
features = ["full"]
version = "1.41"

[dependencies.tower-http]
features = [
    "fs",
    "cors",
    "trace",
]
version = "0.5"

[dependencies.uuid]
features = [
    "v4",
    "serde",
]
version = "1.0"

[features]
default = ["embeddings"]
embeddings = ["fastembed"]

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(unix)".dependencies.fastembed]
optional = true
version = "5"
