[package]
name = "kimichat-agents"
version.workspace = true
edition.workspace = true

[dependencies]
kimichat-types = { workspace = true }
kimichat-models = { workspace = true }
kimichat-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
