[package]
name = "kimichat-agents"
version.workspace = true
edition.workspace = true

[dependencies]
kimichat-types = { workspace = true }
kimichat-models = { workspace = true }
kimichat-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
colored = { workspace = true }
tokio-util = { workspace = true }
kimichat-policy = { workspace = true }
kimichat-terminal = { workspace = true }
kimichat-skills = { workspace = true }
