[package]
name = "kimichat-api"
version.workspace = true
edition.workspace = true

[dependencies]
kimichat-types = { workspace = true }
kimichat-models = { workspace = true }
kimichat-agents = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
