[package]
name = "kimichat-chat"
version.workspace = true
edition.workspace = true

[dependencies]
kimichat-types = { workspace = true }
kimichat-models = { workspace = true }
kimichat-api = { workspace = true }
kimichat-tools = { workspace = true }
kimichat-agents = { workspace = true }
kimichat-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
regex = { workspace = true }
