[package]
name = "kimichat-llm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
serde_json = "1.0"
thiserror = "1.0"
kimichat-logging = { path = "../kimichat-logging" }
kimichat-models = { path = "../kimichat-models" }

[dependencies.reqwest]
features = ["json", "stream"]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1.41"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }
serial_test = { workspace = true }
env_logger = { workspace = true }
