[package]
name = "kimichat-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
colored = "2.1"
kimichat-models = { path = "../kimichat-models" }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["fs", "io-util"] }
