[package]
name = "kimichat-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
kimichat-types = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
