[package]
name = "kimichat-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
vt100 = "0.15"
kimichat-logging = { path = "../kimichat-logging" }

[target."cfg(unix)".dependencies]
libc = "0.2"
